
$Date$

VEGAN STABLE VERSIONS

Version 1.15-3 (opened 28 May, 2009)

	* merged r845: summary.cca uses eigenvals.
	
	* copied eigenvals at r845.
	
	* copied simulate.rda at r814.

	* merged r818, 820: tsallis got argument hill.

	* merged r796, 801: ordisurf can do linear or quadratic surfaces
	with knots 2, 1 or 0.

	* merged r775, r789: meandist with support function (sister
	function to mrpp).

	* merged r834, r837:r842 and r846 that put the observed test
	statistic among permutations like should be done with order
	statistics.  Concerns functions anosim, mantel, mantel.partial,
	mrpp, protest, factorfit, vectorfit. General cleanup also concerns
	adonis and permutest.cca.

	* merged r832: wrong reference in metaMDS.Rd.
	
	* merged r827: kendall.global: could get wrong counts of ties in
	large data sets.
	
	* merged r823: fixed wrong test of output validity in taxa2dist.
	
	* merged r815: anova.cca(..., by = ) name clash if data were
	indexed with 'i' in fitted model.
	
	* merged r812: ordixyplot mixed x and y axes for biplot arrows and
	env centres.

	* merged r811: orditkplot copes with NA and NaN scores.
	
	* merged r810: ordixyplot failed in constrained ordination (broken
	in r108 in Nov 2007).

Version 1.15-2 (released to CRAN: 15 April, 2009)

	* spantree.Rd: example plots use type = "t". Parallel change with
	pkg/vegan. 

	* nestedtemp.Rd tells that bipartite::nestedness is a direct port
	of BINMATNEST of Rodriquez-Girones & Santamaria. Parallel change
	with pkg/vegan.

	* merged r800 (adonis uses less memory in permutation tests) and
	r802 (example enhanced in adonis.Rd, with formatting).

	* merged r600: Oribatid mites (dataset 'mite') got taxon names. 

	* copied nestednodf.R and print.nestednodf.R from pkg/vegan at
	rev651, updated docs at rev653.

	* merge r788: add "..." to decostand so that stressplot(metaMDS(x,
	dist="gower", trymax=40)) works.

	* merge r790 to 1.15 branch: handle missing values in betadisper.
