@@ -5,6 +5,9 @@ VEGAN STABLE VERSIONS
 
 Version 1.15-3 (opened 28 May, 2009)
 
+	* merged r850: wcmdscale removes zero eigenvalues, but may keep
+	the last (unlike cmdscale).
+
 	* merged r845: summary.cca uses eigenvals.
 	
 	* copied eigenvals at r845.
